--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 <!-- views/partials/footer.ejs -->
     <footer>
-        <p>&copy; 2025 Workout Tracker. All Rights Reserved.</p>
+        <p>&copy; By Chukwuemeka Chinaechelum- 2025 Workout Tracker. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
