--- a/views/edit-workout.ejs
+++ b/views/edit-workout.ejs
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
+<%- include('partials/header') %>
 
     <!-- Navigation Bar -->
     <nav>
         <a href="/">Home</a> |
         <a href="/workouts">View Workouts</a> |
-        <a href="/workouts/new">Add Workout</a>
+        <a href="/workouts/add">Add Workout</a>
     </nav>
 
     <div class="container">
